<resources>
    <string name="app_name">CV Trivia Spree</string>
    <string name="menu">CV Trivia Spree</string>
    <string name="start_quiz">Place on Forehead\n to Start</string>
    <string name="start_quiz_timer">5</string>
    <string name="quiz1">CV Trivia Spree</string>
    <string name="quiz2">Act It Out: Teachers</string>
    <string name="quizs">Single Player</string>
    <string name="introb">About Me</string>
    <string name="instb">How to Play</string>
    <string name="menu1">Single Mode Quiz</string>
    <string name="menu2">Dual Mode - Yes/No</string>
    <string name="menu3">Dual Mode - Q/A</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score 0/0</string>
    <string name="initial_clock">1:00</string>
    <string name="incorrect_toast">Wrong Answer!</string>
    <string name="correct_toast">Right Answer!</string>
    <string name="q1_1">When was CV founded?</string>
    <string name="q1_2">What part of CV was named after Mr. MacDonald?</string>
    <string name="q1_3">What was CV before it was a High School?</string>
    <string name="q1_4">Who was the first principal of CV?</string>
    <string name="q1_5">Who is the current principal of CV?</string>
    <string name="q1_6">What Award did CV receive in 2000?</string>
    <string name="q1_7">What are the CV school colors?</string>
    <string name="q1_8">What school is CV’s main rival?</string>
    <string name="q1_9">What is the CV school mascot?</string>
    <string name="q1_10">How many different sports are available at CV?</string>
    <string name="q1_11">How many students attend CV?</string>
    <string name="q1_12">What is the graduation rate of CV?</string>
    <string name="q1_13">What is the most popular sport in CV?</string>
    <string name="q1_14">When did CV receive the Bravo Award?</string>
    <string name="q1_15">What is CV\'s motto?</string>
    <string name="q1_16">What is CV\'s student to teacher ratio?</string>
    <string name="q1_17">By which earthquake was CV damaged in 1971?</string>
    <string name="q1_18">What is CV\'s address</string>
    <string name="q1_19">What percentage of CV students are proficient in English?</string>
    <string name="q1_20">What percentage of CV students are proficient in Math?</string>
    <string name="q1_21">What is CV\'s average SAT score?</string>
    <string name="q1_22">What is CV\'s average ACT score?</string>
    <string name="q1_23">What percentage of CV students enroll for an AP class?</string>
    <string name="q1_24">What is CV\'s ranking for Best College Prep Public High School?</string>
    <string name="q1_25">True or False: Is CV a STEM school?</string>
    <string name="q1_26">What classes are in the 7000 buildings?</string>
    <string name="q1_27">True or False: At CV it is required to take 3 years of English for graduation</string>
    <string name="q1_28">How many years of English are required to graduate from CV?</string>
    <string name="q1_29">How many years of History are required to graduate from CV?</string>
    <string name="q1_30">How many years of Math are required to graduate from CV?</string>
    <string name="q1_31">How many years of Science are required to graduate from CV?</string>
    <string name="q1_32">How many credits do you need to graduate from CV?</string>
    <string name="q1_33">When does 1st period start in CV?</string>
    <string name="q1_34">When does 6th period end in CV?</string>
    <string name="a1_1">1960</string>
    <string name="a1_2">The MacDonald Auditorium</string>
    <string name="a1_3">Middle School</string>
    <string name="a1_4">William C. Thomas</string>
    <string name="a1_5">Dr. Linda Gluber Junge</string>
    <string name="a1_6">The National Blue Ribbon School Award</string>
    <string name="a1_7">Navy and Columbia Blue</string>
    <string name="a1_8">Arcadia High School</string>
    <string name="a1_9">Falcon</string>
    <string name="a1_10">14</string>
    <string name="a1_11">2800-3000</string>
    <string name="a1_12">90-100%</string>
    <string name="a1_13">Football</string>
    <string name="a1_14">2005</string>
    <string name="a1_15">Pride, Tradition, Honor</string>
    <string name="a1_16">28:1</string>
    <string name="a1_17">The Sylmar Earthquake</string>
    <string name="a1_18">2900 Community Ave. La Crescenta, CA</string>
    <string name="a1_19">84%</string>
    <string name="a1_20">62%</string>
    <string name="a1_21">1280</string>
    <string name="a1_22">30/36</string>
    <string name="a1_23">38%</string>
    <string name="a1_24">66th</string>
    <string name="a1_25">True</string>
    <string name="a1_26">Spanish and Math</string>
    <string name="a1_27">False</string>
    <string name="a1_28">4</string>
    <string name="a1_29">3</string>
    <string name="a1_30">2</string>
    <string name="a1_31">2</string>
    <string name="a1_32">220</string>
    <string name="a1_33">7:55</string>
    <string name="a1_34">3:03</string>
    <string name="q2_1">Mr. Allen</string>
    <string name="q2_2">Mrs. Babington </string>
    <string name="q2_3">Mr. Beerman</string>
    <string name="q2_4">Mrs. Beerman</string>
    <string name="q2_5">Mrs. Beers</string>
    <string name="q2_6">Mrs. Besoli</string>
    <string name="q2_7">Mrs. Blackwood</string>
    <string name="q2_8">Mr. Bozoyan</string>
    <string name="q2_9">Mrs. Briscoe</string>
    <string name="q2_10">Mrs. Brown</string>
    <string name="q2_11">Mrs. Call</string>
    <string name="q2_12">Mrs. Choi</string>
    <string name="q2_13">Mr. Clark</string>
    <string name="q2_14">Mrs. Debel</string>
    <string name="q2_15">Mrs. Deitch</string>
    <string name="q2_16">Mrs. DeKruyf</string>
    <string name="q2_17">Mrs. Der Mesropian</string>
    <string name="q2_18">Mrs. Dominguez</string>
    <string name="q2_19">Mr. William</string>
    <string name="q2_20">Mrs. Engen</string>
    <string name="q2_21">Mr. Evans</string>
    <string name="q2_22">Mrs. Fishback</string>
    <string name="q2_23">Mrs. Fite</string>
    <string name="q2_24">Mrs. Flower</string>
    <string name="q2_25">Mr. Dawn</string>
    <string name="q2_26">Mr. Freemon</string>
    <string name="q2_27">Mrs. Furatani</string>
    <string name="q2_28">Mrs. Gill</string>
    <string name="q2_29">Mr. Gossard</string>
    <string name="q2_30">Mrs. Greenway</string>
    <string name="q2_31">Mr. Gregorian</string>
    <string name="q2_32">Mr. Hall</string>
    <string name="q2_33">Mrs. Harris</string>
    <string name="q2_34">Mr. Hart</string>
    <string name="q2_35">Mr. Harvey</string>
    <string name="q2_36">Mr. Hernandez</string>
    <string name="q2_37">Mrs. Hirdler</string>
    <string name="q2_38">Mrs. Huang</string>
    <string name="q2_39">Mrs. Hugo</string>
    <string name="q2_40">Mrs. Ishikawa</string>
    <string name="q2_41">Mr. Johnson</string>
    <string name="q2_42">Mrs. Karibyan</string>
    <string name="q2_43">Mrs. Katzer</string>
    <string name="q2_44">Mr. Keenan</string>
    <string name="q2_45">Mr. Nareg</string>
    <string name="q2_46">Mr Kim</string>
    <string name="q2_47">Mrs. Lau</string>
    <string name="q2_48">Mr. Lee</string>
    <string name="q2_49">Mr. Levering</string>
    <string name="q2_50">Ms. Lim</string>
    <string name="q2_51">Mrs. Lyons</string>
    <string name="q2_52">Mr. Mack</string>
    <string name="q2_53">Mrs. Manukyan</string>
    <string name="q2_54">Mr. Markor</string>
    <string name="q2_55">Mrs. Marshall</string>
    <string name="q2_56">Mrs. Mathais</string>
    <string name="q2_57">Mrs. Mazur</string>
    <string name="q2_58">Mrs. McLeod</string>
    <string name="q2_59">Mr. Mendoza</string>
    <string name="q2_60">Mr. Merlo</string>
    <string name="q2_61">Mrs. Milano</string>
    <string name="q2_62">Mr. Miller</string>
    <string name="q2_63">Mrs. Moses</string>
    <string name="q2_64">Mrs. Music</string>
    <string name="q2_65">Mrs. Napiwocki</string>
    <string name="q2_66">Mr. Neat</string>
    <string name="q2_67">Mr. Nelson</string>
    <string name="q2_68">Mr. Ngai</string>
    <string name="q2_69">Mr. Orchid</string>
    <string name="q2_70">Mrs. Parker</string>
    <string name="q2_71">Mrs. Julie</string>
    <string name="q2_72">Mr. Pehar</string>
    <string name="q2_73">Mr. Perez</string>
    <string name="q2_74">Ms. Tyraysha</string>
    <string name="q2_75">Mr. Platt</string>
    <string name="q2_76">Ms. Progroszewski</string>
    <string name="q2_77">Mr. Sakunju</string>
    <string name="q2_78">Mrs. Sano</string>
    <string name="q2_79">Mr. Saw</string>
    <string name="q2_80">Mr. Schick</string>
    <string name="q2_81">Mr. Schilling</string>
    <string name="q2_82">Mr. Seiler</string>
    <string name="q2_83">Mr. Sheridan</string>
    <string name="q2_84">Mr. Smiley</string>
    <string name="q2_85">Mr. Smith</string>
    <string name="q2_86">Mrs. Smith</string>
    <string name="q2_87">Mr. Son</string>
    <string name="q2_88">Mrs. Song</string>
    <string name="q2_89">Mrs. Spink</string>
    <string name="q2_90">Mr. Taix</string>
    <string name="q2_91">Dr. Tanahan</string>
    <string name="q2_92">Mr. Torres</string>
    <string name="q2_93">Mrs. Tuason</string>
    <string name="q2_94">Mrs. Vasquez</string>
    <string name="q2_95">Mrs. Waters</string>
    <string name="q2_96">Mr. Zargarian</string>
    <string name="a2_all">Self Answer</string>
    <string name="q3_1">CV was founded in 1960</string>
    <string name="q3_2">The MacDonald Auditorium was named after Mr. MacDonald</string>
    <string name="q3_3">CV was a Middle School before it became a High School</string>
    <string name="q3_4">William C. Thomas was the first principal of CV</string>
    <string name="q3_5">Dr. Linda Gluber Junge is the current principal of CV</string>
    <string name="q3_6">CV received The National Blue Ribbon School Award in 2000</string>
    <string name="q3_7">Navy and Columbia Blue are the CV school colors</string>
    <string name="q3_8">Arcadia High School is CV\'s main rival</string>
    <string name="q3_9">The eagle is the CV school mascot</string>
    <string name="q3_10">10 sports are available at CV</string>
    <string name="q3_11">About 2,000 students currently attend CV</string>
    <string name="q3_12">CV\'s graduation rate is about 70%</string>
    <string name="q3_13">Basketball is the most popular sport in CV</string>
    <string name="q3_14">CV received the Bravo Award in 2015</string>
    <string name="q3_15">CV\'s motto is Honor, Excellence, Pride</string>
    <string name="q3_16">CV\'s student to teacher ratio is 36:1</string>
    <string name="q3_17">The Sylmar Earthquake damaged CV in 1990</string>
    <string name="q3_18">CV\'s address is 9200 Ramsdell Ave. La Crescenta, CA</string>
    <string name="q3_19">94% of CV\'s students are proficient in English</string>
    <string name="q3_20">62% of CV\'s students are proficient in Math?</string>
    <string name="q3_21">CV\'s average SAT score is 1080</string>
    <string name="q3_22">CV\'s average ACT score is 30/36</string>
    <string name="q3_23">18% of CV\'s students enroll for an AP class</string>
    <string name="q3_24">CV is ranked as 16th for Best College Prep Public High School</string>
    <string name="q3_25">CV is a STEM school</string>
    <string name="q3_26">Math and Spanish are in the 5000 buildings</string>
    <string name="q3_27">At CV it is required to take 3 years of English for graduation</string>
    <string name="q3_28">At CV it is required to take 4 years of English for graduation</string>
    <string name="q3_29">At CV it is required to take 3 years of History for graduation</string>
    <string name="q3_30">At CV it is required to take 2 years of Math for graduation</string>
    <string name="q3_31">At CV it is required to take 1 year of Science for graduation</string>
    <string name="q3_32">At CV you need 200 credits to graduate</string>
</resources>