<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:background="@drawable/hillblue_background">

    <TextView
        android:id="@+id/q1_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0sp"
        android:text="@string/initial_clock"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/q1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/q1_timer"
        android:layout_marginTop="73dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/q1_10"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/a1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q1_text_view"
        android:layout_centerHorizontal="true"
        android:text="@string/a1_1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/q1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a1_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/initial_score"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>