<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hillblue_background">

    <TextView
        android:id="@+id/qs_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:padding="10dp"
        android:text="@string/initial_clock"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/qs_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qs_linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/q3_18"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/qs_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/qs_score"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/true_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40px"
            android:background="?attr/actionModeSplitBackground"
            android:text="@string/true_button"
            android:textColor="@android:color/background_light"
            android:textSize="27sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/false_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/false_button"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="27sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/qs_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/initial_score"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
