<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/hillblue_background">
    android:gravity="center">

    <TextView
        android:id="@+id/q2_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42sp"
        android:padding="10sp"
        android:text="@string/initial_clock"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/q2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:padding="10dp"
        android:text="@string/initial_score"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/q2_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/q2_1"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="45sp"
        android:textStyle="bold" />

</RelativeLayout>